--- a/Bootstrap recreated homework/Profile.html
+++ b/Bootstrap recreated homework/Profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="fontawesome-free-6.1.1-web\css\all.css">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -20,26 +20,39 @@
 </head>
 <body>
    <div class="p-5">
-    <div class="container">
-        <div class="row text-center">
+    <div class="container ">
+        <div class="row  no-gutters">
             <div class="col-md">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 10rem;">
                     <img class="card-img-top" src="images\favicon.ico" alt="image">
                     <div class="card-body">
                       <h5 class="card-title">Gjokica Stojanovski</h5>
                     </div>
                   </div>
             </div>
-            <div class="col-md max-width: 150px">
-                <h3 class="usertag card-title"><i class="fa-solid fa-user"></i><b>Gjokica</b></br><i class="fa-solid fa-compass"></i>London,UK</h3>
+            <div class="col-md justify-content-md-center">
+                <div style="width:30%; ;"> 
+                <h3 class="usertag "><i class="fa-solid fa-user"></i><b>Gjokica</b></br><i class="fa-solid fa-compass pad"></i>London,UK</h3>
             <p class="card-text" id="descr">Feeling wonderfull</p>
           <img id="post card-image" src="images\rome.jpg" class="img--fluid" alt="image"/>
                 </div>
             </div>
-            <div class="col-md"><p class="card-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                 Quibusdam nam repellat, quos voluptatem sequi natus nostrum
-                  ratione labore maiores eius autem aspernatur delectus accusantium .</p>
+            <div class="col-md">
+                <h3 div class="fw-bold">BIO</h3> 
+                <p class="text-justify">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                 Culpa ducimus non molestias praesentium autem esse ipsum
+                  doloremque dolore, delectus animi ipsam possimus, ad velit
+                   dolorum sed inventore perspiciatis sint perferendis provident
+                    veniam voluptate natus porro, minus voluptates. Aperiam nisi
+                     perferendis necessitatibus id architecto adipisci enim laboriosam, 
+                     aspernatur, officiis, odio provident illum totam ad quo iste fugiat!
+                      Blanditiis a distinctio assumenda perferendis laboriosam debitis molestiae
+                       temporibus enim, aliquam minus recusandae? Aspernatur sed praesentium tempora
+                        iusto quidem eos ex, quibusdam omnis beatae numquam nesciunt! Dicta aliquam deserunt
+                         consequatur odio maxime quod libero. Dignissimos ipsa, pariatur quisquam maiores reprehenderit beatae iure quia ex
+                        </p>
+                </div>
         </div>
     </div>
    </div> 
