--- a/Bootstrap recreated homework/index.html
+++ b/Bootstrap recreated homework/index.html
@@ -43,7 +43,7 @@
               <a href="#home" class="nav-link">Homepage</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Profile</a>
+              <a href="Profile.html" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
               <a href="responsive-table.html" class="nav-link">Table Data</a>
