--- a/Javascript-Variables/index.html
+++ b/Javascript-Variables/index.html
@@ -18,11 +18,11 @@
       let livesInSkopje = "false";
 
       let user = {
-        name: "Gjokica",
-        age: "25",
-        isemployed: "true",
-        gender: "male",
-        livesInSkopje: "false",
+        name: "",
+        age: "",
+        isemployed: "",
+        gender: "",
+        livesInSkopje: "",
       };
 
       function myFunction() {alert(name);}
